chore: rename NavigationView to NavigationFragment